--- a/aphinya.html
+++ b/aphinya.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<body>
-		<h1>moooooooooooooooo! STrategy completes</h1>
+		<h1>moooooooooooooooo! Strategy completes. Woop. Woop.</h1>
 		<img src="">
 	</body>
 </html>
