--- a/aphinya.html
+++ b/aphinya.html
@@ -7,6 +7,7 @@
 	<body>
 		<h1>moooooooooooooooo! Strategy completes. Woop. Woop.</h1>
 		<h2>WEET WEET</h2>
+		<h3>Pricing moot!</h3>
 		<img src="">
 	</body>
 </html>
